# expense-bot

./: .env.example  .env.prod.example  .env.production  .gitignore  .pre-commit-config.yaml  AUDIO_FEATURES_GUIDE.md  Dockerfile  Dockerfile.prod  ENABLE_IPV6_DOCKER.md  FINANCIAL_AGENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README-DEPLOYMENT.md  README.md  README_API.md  REFACTORING_SUMMARY.md  alembic.ini  cleanup-networks.sh  deploy-simple.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_handler.py  health_check.py  nginx.conf  pyproject.toml  pyrightconfig.json  pytest.ini  run-migrations.sh  run_api.sh  run_bot.sh  temp_fix.py  test_audio_expenses.py  test_audio_fixes.py  test_confirmation_fix.py  test_financial_agent.py  verify_financial_agent.py
.github/workflows/: deploy-old.yml  deploy.yml  terraform.yml
.zed/: settings.json
docs/: BOTFATHER_DOMAIN_SETUP.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_QUICKSTART.md  MONOREPO.md  deployment.md  features.md  github-secrets-setup.md  prd_en.md  prd_es.md
libs/: config.py
libs/db/: base.py  config.py  crud.py  models.py  pyproject.toml  seed.py
libs/db/migrations/: env.py
libs/db/migrations/versions/: 001_initial_migration.py  002_add_balance_tracking_settings.py  003_create_users_table.py  003_remove_negative_balance_constraint.py  1205b25116b9_sync.py  6b49122464a2_add_category_merchant_necessity_to_.py  a0b6f1825403_add_categories_and_merchants_tables.py  ac79d00ee518_add_users_email_and_pwd.py  c2a98e5201cb_telegram_id_optional.py
libs/integrations/fx/: __init__.py  service.py
libs/integrations/fx/providers/: __init__.py
libs/reports/: pdf_service.py
libs/services/: __init__.py  account_service.py  audio_transcription.py  transaction_service.py  user_service.py
libs/utils/: __init__.py
libs/validators/: __init__.py  account_validators.py  transaction_validators.py  user_validators.py
prompts/: initial_prompt.md
scripts/: deploy.sh  health-check.sh  setup-server.sh  setup_cron.sh  start.sh
src/: app.py  config.py
src/agent/: agent.py  financial_agent.py  schemas.py
src/agent/tools/: db_tool.py
src/db/: base.py  models.py  seed.py
src/db/migrations/: env.py
src/db/migrations/versions/: 003_create_users_table.py  2e5aa12f0766_add_pending_transactions_table.py
src/integrations/fx/providers/: ars_sources.py  coingecko.py
src/scripts/: clear_database.py  process_pending_transactions.py  reset_database.py
src/services/: __init__.py  audio_transcription.py
src/telegram/: bot.py  financial_agent_handlers.py  formatters.py.bak  states.py
src/utils/: credits.py  date_utils.py  language.py  timeparse.py
terraform/: github_secrets.tf  main.tf  outputs.tf  terraform.tfstate  terraform.tfvars.example  user_data.sh  user_data_minimal.sh  variables.tf
tests/: conftest.py  test_db_tool.py  test_flows.py  test_fx_tool.py  test_parsing.py
utils/: date_utils.py  language.py  money.py  timeparse.py
