[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent"
version = "0.0.1"
description = "AI-powered financial tracking agent via Telegram"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.3.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "black>=23.0.0",
    "dateparser>=1.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "mypy>=1.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "reportlab>=4.0.0",
    "ruff>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest-cov>=4.1.0", "pytest-mock>=3.12.0"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
